src/objects/Dummy_Object__c.object
<CustomObject>
    <description>Dummy Object for test purpose only</description>
    <fields>
        <fullName>Age__c</fullName>
        <inlineHelpText>How old are you?</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <inlineHelpText>Choose your favorite date time</inlineHelpText>
        <label>Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game_type__c</fullName>
        <label>Game type</label>
        <picklist>
            <picklistValues>
                <fullName>Game1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CsCz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <inlineHelpText>Describe your hobby in max 100 character</inlineHelpText>
        <label>Hobby</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Please enter your last name</inlineHelpText>
        <label>Last Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dummy_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <label>Dummy Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>with_last_name</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>with last name</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Dummy Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dummy Objects</pluralLabel>
    <recordTypes>
        <fullName>Record_Type_A</fullName>
        <active>true</active>
        <label>Record Type A</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>